deploy/ai/deployment.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  namespace: "ollama"
  name: "ollama-deployment"
  labels:
    environment: "test"
    app: "ollama"
    role: "llm" # large language model
spec:
  containers:
  - name: "ollama"
    image: "ollama/ollama:0.1.16"
    ports:
      - name: "http"
        containerPort: 11434
        protocol: "TCP"
    volumeMounts:
    - name: data
      mountPath: /root/.ollama
    # resources:
    #   limits: 
    #     cpu: "4000m"
    #     memory: "8192Mi"
    #   requests:
    #     cpu: "2000m"
    #     memory: "4096Mi"
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: ollama-pvc
