deploy/ai/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ollama
  name: ollama-service
  labels:
    environment: test
    app: ollama
    role: service
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
